[package]
name = "rust-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = {version = "1.47.1" , features =  ["full"]}
serde = { version = "1.0.226", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde","v4"] }
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1"
regex = "1"
dotenv = "0.15.0"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "9.0"
tower = { version = "0.5", features = ["util"] }